project settings changes